[gd_scene load_steps=8 format=3 uid="uid://dcxt4pqqi0uo1"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_xiwrf"]
[ext_resource type="PackedScene" uid="uid://xqgo173oyyal" path="res://Player/slide.tscn" id="3_efmqj"]
[ext_resource type="PackedScene" uid="uid://e8tyv6nw01dw" path="res://OtherScenes/camera_2d.tscn" id="4_c1dal"]
[ext_resource type="PackedScene" uid="uid://b1xjd73y6tlek" path="res://OtherScenes/hurt_box_component.tscn" id="4_pbyu7"]
[ext_resource type="PackedScene" uid="uid://clxvytpthau81" path="res://Player/mega_man_sprite.tscn" id="6_uoe3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hofe"]
size = Vector2(11, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h803n"]
size = Vector2(11, 18)

[node name="MegaMan" type="CharacterBody2D"]
collision_layer = 2
floor_snap_length = 2.0
script = ExtResource("1_xiwrf")
acceleration = 875
max_speed = 78.0
gravity = 900
jump_force = 320
max_fall_speed = 360
dash_speed = 200

[node name="MegaManSprite" parent="." instance=ExtResource("6_uoe3y")]

[node name="MegaPos" type="Marker2D" parent="."]
position = Vector2(20, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_6hofe")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Slide" parent="." instance=ExtResource("3_efmqj")]

[node name="Camera2D" parent="." instance=ExtResource("4_c1dal")]
position = Vector2(1, -5)

[node name="Timers" type="Node" parent="."]

[node name="DashTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="DashBuffer" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="BulletBuffer" type="Timer" parent="Timers"]
wait_time = 0.32
one_shot = true

[node name="FireRate" type="Timer" parent="Timers"]
wait_time = 0.14
one_shot = true

[node name="FloorCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 3)

[node name="HurtBoxComponent" parent="." instance=ExtResource("4_pbyu7")]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_h803n")

[connection signal="timeout" from="Timers/DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Timers/DashBuffer" to="." method="_on_dash_buffer_timeout"]
[connection signal="timeout" from="Timers/BulletBuffer" to="." method="_on_bullet_buffer_timeout"]
[connection signal="hurt" from="HurtBoxComponent" to="." method="_on_hurt_box_component_hurt"]

[editable path="MegaManSprite"]
